--- a/pages/options/options.html
+++ b/pages/options/options.html
@@ -85,7 +85,7 @@
         <div class="form-check form-switch">
             <input class="form-check-input" type="checkbox" id="showDueDateAlert" checked>
             <label class="form-check-label" for="showDueDateAlert">
-                Show due date alert
+                Show due date message
             </label>
         </div>
     </div>
@@ -125,7 +125,7 @@
 
     <h5 class="mb-3 mt-5">Versions details</h5>
     <ul>
-        <li>v1.3.0: (feature) added due date indication</li>
+        <li>v1.4.0: (feature) added due date indication</li>
     </ul>
     <ul>
         <li>v1.2.0: (feature) added smart navigation</li>
