return the preview temporarily

--- a/pages/popup/popup.html
+++ b/pages/popup/popup.html
@@ -38,13 +38,17 @@
                         </div>
                     </div>
                 </div>
+                <div class="preview-container">
+                    <span id="preview-error" class="preview-error"></span>
+                    <a href="#" target="_blank" id="preview-link"></a>
+                </div>
                 <div class="row">
                     <small class="fw-semibold text-secondary">Default project: <a href="#" target="_blank"
                             id="link-to-project" title="Open board"></a></small>
                 </div>
             </div>
 
-            <div class="container mt-3">
+            <div class="container">
                 <div class="row my-3">
                     <div class="col">
                         <!-- <div class="mb-2 small text-secondary">
