--- a/pages/popup/popup.html
+++ b/pages/popup/popup.html
@@ -51,9 +51,18 @@
             <div class="container">
                 <div class="row my-3">
                     <div class="col">
-                        <!-- <div class="mb-2 small text-secondary">
-                            Suggested (yours, open in tabs):
-                        </div> -->
+                        <!-- Filter buttons -->
+                        <div id="filter-buttons-container" class="filter-buttons d-flex gap-1 mb-2">
+                            <div class="d-none" id="filter-button-template">
+                                <span class="filter-button">
+                                    <input type="radio" class="btn-check" name="filter-options" id="filter-template"
+                                        autocomplete="off">
+                                    <label for="filter-template" class="btn btn-sm py-0 px-2"></label>
+                                </span>
+                            </div>
+                        </div>
+
+                        <!-- Issues table -->
                         <div class="issues-table-container">
                             <!-- loading placeholders -->
                             <table id="issues-table-placeholders" class="table-sm jira-issues placeholders">
@@ -84,8 +93,8 @@
                                         </td>
                                         <td class="jira-tab-icon">
                                             <span class="tab-icon" title="Tab is open. Click to activate.">
-                                                <svg width="14" height="14" viewBox="0 0 24 24"
-                                                    fill="none" stroke="#888" stroke-width="2" stroke-linecap="round"
+                                                <svg width="14" height="14" viewBox="0 0 24 24" fill="none"
+                                                    stroke="#888" stroke-width="2" stroke-linecap="round"
                                                     stroke-linejoin="round">
                                                     <path
                                                         d="M3 5h6l2 3h10a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V7a2 2 0 0 1 2-2z">
