--- a/pages/options/options.html
+++ b/pages/options/options.html
@@ -125,10 +125,9 @@
 
     <h5 class="mb-3 mt-5">Versions details</h5>
     <ul>
-        <li>v1.4.0: (feature) added due date indication</li>
-    </ul>
-    <ul>
-        <li>v1.2.0: (feature) added smart navigation</li>
+        <li>v2.0.0: (feature) added issue list in popup</li>
+        <li>v2.0.0: (feature) added due date indication</li>
+        <li>v2.0.0: (feature) added smart navigation</li>
     </ul>
     <ul>
         <li>v1.0.13: (feature) added link to board</li>
