- enhance popup with filter icons - add sprite.svg to popup

--- a/pages/popup/popup.html
+++ b/pages/popup/popup.html
@@ -58,7 +58,11 @@
                                 <span class="filter-button">
                                     <input type="radio" class="btn-check" name="filter-options" id="filter-template"
                                         autocomplete="off">
-                                    <label for="filter-template" class="btn btn-sm py-0 px-2"></label>
+                                    <label for="filter-template" class="btn btn-sm py-0 px-2 py-1">
+                                        <svg width="14" height="14">
+                                            <use href="sprite.svg#"></use>
+                                        </svg>
+                                    </label>
                                 </span>
                             </div>
                         </div>
@@ -94,12 +98,8 @@
                                         </td>
                                         <td class="jira-tab-icon">
                                             <span class="tab-icon" title="Tab is open. Click to activate.">
-                                                <svg width="14" height="14" viewBox="0 0 24 24" fill="none"
-                                                    stroke="#888" stroke-width="2" stroke-linecap="round"
-                                                    stroke-linejoin="round">
-                                                    <path
-                                                        d="M3 5h6l2 3h10a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V7a2 2 0 0 1 2-2z">
-                                                    </path>
+                                                <svg width="14" height="14">
+                                                    <use href="sprite.svg#tab"></use>
                                                 </svg>
                                             </span>
                                         </td>
