--- a/pages/options/options.html
+++ b/pages/options/options.html
@@ -127,6 +127,7 @@
 
     <h5 class="mb-3 mt-5">Versions details</h5>
     <ul>
+        <li>v2.0.2: (bugfix) added copy icon to pages with filter URL</li>
         <li>v2.0.1: (feature) added issue list filters</li>
         <li>v2.0.0: (feature) added issue list in popup</li>
         <li>v2.0.0: (feature) added due date indication</li>
