Update to version 2.0.5: Change copy icon to match Jira's new design and update manifest version. Include new SVG generation method for improved icon rendering.

--- a/pages/options/options.html
+++ b/pages/options/options.html
@@ -117,6 +117,8 @@
 
         <h5 class="mb-3 mt-5">Versions details</h5>
         <ul>
+            <li>v2.0.5: (feature) change copy icon to match Jira new design</li>
+            <li>v2.0.4: Published to Chrome Web Store</li>
             <li>v2.0.2: (bugfix) added copy icon to pages with filter URL</li>
             <li>v2.0.1: (feature) added issue list filters</li>
             <li>v2.0.0: (feature) added issue list in popup</li>
