add version details

--- a/src/pages/options/options.html
+++ b/src/pages/options/options.html
@@ -185,6 +185,7 @@
 
                 <h5 class="mb-3 mt-5">Versions details</h5>
                 <ul>
+                    <li>v2.1.0: (feature) automatically checks clipboard on popup open and fills the input if it matches a Jira issue key</li>
                     <li>v2.0.6: (feature) added welcome pin message</li>
                     <li>v2.0.5: (feature) change copy icon to match Jira new design</li>
                     <li>v2.0.4: Published to Chrome Web Store</li>
